[package]
name = "dmk_rp2040"
version = "0.1.0"
edition = "2024"

[dependencies]
dmk = { path = "../dmk" }

cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }

defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

# If you're not going to use a Board Support Package you'll need these:
rp2040-hal = { version="0.11", features=["rt", "critical-section-impl"] }
rp2040-boot2 = "0.3"

usb-device = "0.3.1"
panic-halt = "0.2.0"
usbd-human-interface-device = { version = "0.5.1", features = ["defmt"] }
fugit = "0.3.7"
frunk = { version = "0.4.4", default-features = false, features = ["proc-macros"] }

[features]
default = ["active_high"]
active_high = []
active_low = []

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
